background and button color changes, also major padding issue with recipe cards fixed on mobile screens

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(248, 248, 248);
+    background-color: #eaebde;
 }
 
 img {
@@ -16,7 +16,7 @@ img {
     height: 220px;
     object-fit: cover;
     border-radius: 5%;
-    border: solid black 3px;
+    border: solid rgb(27, 27, 27) 2px;
 }
 
 .recipe-cards {
@@ -63,14 +63,12 @@ header {
 
 a {
     text-decoration: none;
-    color: black;
     font-weight: 600;
     color: azure;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border: solid black 3px;
+    padding-top: 12px;
+    padding-bottom: 12px;
     border-radius: 10px;
-    background-color: rgb(0, 0, 0);
+    background-color: #57a857;
     width: 226px;
     text-align: center;
     align-items: center;
@@ -86,6 +84,8 @@ a {
     border-radius: 10px;
     margin-top: -1px;
     border: solid rgb(206, 206, 206) 1px;
+    color: rgb(122, 122, 122);
+    font-weight: 600;
 }
 
 .more {
